# cgo

./: CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg-configuration.json
cmd/: cgo.cc
compiler/: CMakeLists.txt  runner.cc  runner.h  scanner.cc  scanner.h  scanner_test.cc
ms/: CMakeLists.txt  error.h  file.cc  file.h  vector.h
testing/: go.mod
tool/: CMakeLists.txt  tool.cc  tool.h  tool_test.cc
